Adaptar Traducciones al paquete v2

--- a/resources/js/app/lang/es.json
+++ b/resources/js/app/lang/es.json
@@ -1,4 +1,4 @@
 {
-    "testQqq": "esto es un test",
-    "anotherField": "eeeeeeei"
+    "test_message": "Mensaje de prueba",
+    "test_message_VARIABLE": "Mensaje de prueba con :variable"
 }
