--- a/resources/js/app/lang/en.json
+++ b/resources/js/app/lang/en.json
@@ -1,4 +1,4 @@
 {
-    "testQqq": "esto es un test",
-    "anotherField": "eeeeeeei"
+    "test_message": "Test message",
+    "test_message_VARIABLE": "Test message with :variable"
 }
